# granola

./: Cargo.toml  README.md  typos.toml
crates/granola/: Cargo.toml
crates/granola-derive/: Cargo.toml
crates/granola-derive/src/: lib.rs
crates/granola/src/: css.rs  filters.rs  homemade.rs  html.rs  lib.rs  oven.rs  pretty.rs  recipes.rs  svg.rs
crates/granola/src/cookbook/: css.rs
crates/granola/src/cookbook/css/: properties.rs  rule.rs  selector.rs  selectors_list.rs  stylesheet.rs
crates/granola/src/cookbook/css/declarations_block/: border_reset.rs  box_sizing_border_box.rs  margin_padding_reset.rs
crates/granola/src/cookbook/css/properties/: allow_keywords.rs  auto.rs  balance.rs  baseline.rs  block.rs  bolder.rs  border_box.rs  break_word.rs  button.rs  center.rs  collapse.rs  column.rs  current_color.rs  dotted.rs  flex.rs  important.rs  inherit.rs  inline.rs  inline_flex.rs  isolate.rs  list_item.rs  middle.rs  none.rs  nowrap.rs  pointer.rs  pretty.rs  relative.rs  sans_serif.rs  solid.rs  transparent.rs  underline.rs  vertical.rs  wrap.rs
crates/granola/src/cookbook/css/rule/: all_headings_font_reset.rs  anchor_inherit.rs  b_strong_font_weight.rs  box_sizing_reset.rs  hr_reset.rs  progress_vertical_alignment.rs  search_decoration_appearance.rs  small_font_size.rs  spin_button_height.rs  sub_sup_defaults.rs  sub_vertical_pos.rs  summary_display.rs  sup_vertical_pos.rs  universal_reset.rs
crates/granola/src/cookbook/css/selector/: universal.rs  universal_after.rs  universal_backdrop.rs  universal_before.rs  universal_file_selector_button.rs  universal_placeholder.rs
crates/granola/src/cookbook/css/selectors_list/: all_headings.rs  all_headings_ext.rs  form_controls.rs  form_controls_ext.rs  headings.rs  media_selectors.rs  monospace_selectors.rs  universal_reset.rs  universal_selectors.rs  universal_selectors_ext.rs
crates/granola/src/cookbook/css/stylesheet/: andy_bell.rs  josh_w_comeau.rs  modern_css_reset.rs  modern_normalize.rs  preflight.rs
crates/granola/src/cookbook/html/: metadata.rs  tabular.rs
crates/granola/src/cookbook/html/forms/: formmethod_dialog.rs  formmethod_get.rs  formmethod_post.rs  method_dialog.rs  method_get.rs  method_post.rs  type_button.rs  type_reset.rs  type_submit.rs
crates/granola/src/cookbook/html/metadata/: charset_utf8.rs  name_robots.rs  name_viewport.rs  rel_stylesheet.rs
crates/granola/src/css/: at_rule.rs  custom_function.rs  custom_property.rs  declaration.rs  declarations.rs  functions.rs  properties.rs  rule.rs  selector.rs  selectors.rs  stylesheet.rs  types.rs
crates/granola/src/css/functions/: anchor_size.rs  calc.rs  clamp.rs  color_mix.rs  var.rs
crates/granola/src/css/properties/: align.rs  anchor_name.rs  anchor_scope.rs  appearance.rs  background.rs  border.rs  bottom.rs  box_.rs  box_sizing.rs  color.rs  content.rs  cursor.rs  custom_property.rs  display.rs  flex.rs  font.rs  gap.rs  height.rs  interpolate_size.rs  isolation.rs  justify.rs  letter_spacing.rs  list_style.rs  margin.rs  max_width.rs  min_height.rs  opacity.rs  outline.rs  overflow.rs  padding.rs  pointer_events.rs  position.rs  resize.rs  scroll.rs  tab_size.rs  text.rs  top.rs  transform.rs  transition.rs  vertical_align.rs  (+3 more)
crates/granola/src/css/selectors/: complex_selector.rs  compound_selector.rs  selectors_list.rs  simple_selector.rs  type_selector.rs
crates/granola/src/homemade/: btn.rs  colors.rs  css.rs  elements.rs  html.rs  tmpl_base.rs  tooltip.rs
crates/granola/src/homemade/elements/: meta.rs  metadata.rs  th.rs
crates/granola/src/homemade/templates/: base.rs
crates/granola/src/html/: aria.rs  attributes.rs  elements.rs  types.rs
crates/granola/src/html/elements/: embedded.rs  forms.rs  interactive.rs  metadata.rs  multimedia.rs  root.rs  scripting.rs  sections.rs  tabular.rs  text_content.rs  text_semantics.rs  web_components.rs
crates/granola/src/recipes/: common.rs  css.rs  html.rs  styles.rs  svg.rs
crates/granola/src/recipes/common/: form_methods.rs  relationships.rs  types.rs
crates/granola/src/recipes/css/: declarations_block.rs  properties.rs  rule.rs  selectors_list.rs
crates/granola/src/recipes/elements/: meta.rs  th.rs
crates/granola/src/recipes/html/: forms.rs  lists.rs
crates/granola/src/recipes/styles/: btn.rs  properties.rs
crates/granola/src/recipes/svg/: attributes.rs  material_symbols.rs
crates/granola/src/recipes/templates/: base.rs
crates/granola/src/svg/: attributes.rs  elements.rs
crates/granola/src/svg/elements/: path.rs  rect.rs  svg.rs  text.rs
crates/granola/src/template/: base.rs
crates/granola/src/templates/: base.rs
examples/cuisine/: Cargo.toml  README.md
examples/cuisine/src/: css.rs  handlers.rs  html.rs  main.rs  snippets.rs  utils.rs
examples/hello_world/: Cargo.toml  README.md
examples/hello_world/src/: main.rs
examples/oats_and_ends/: Cargo.toml  README.md
examples/oats_and_ends/src/: main.rs
examples/palette/: Cargo.toml  README.md
examples/palette/src/: css.rs  handlers.rs  html.rs  main.rs  utils.rs
examples/palette/static/: style.css
tests/alloc/: Cargo.toml  README.md
tests/alloc/src/: lib.rs  main.rs
tests/alloc/src/snapshots/: alloc_css.snap  alloc_html.snap  alloc_recipe.snap
tests/cpu/: Cargo.toml  README.md
tests/cpu/benches/: cpu.rs
tests/diagnostics/: Cargo.toml  README.md
tests/diagnostics/src/: lib.rs
tests/diagnostics/tests/ui/: from_non_fastwritable.rs  from_non_fastwritable.stderr  missing_bake_content.rs  missing_bake_content.stderr  missing_from.rs  missing_from.stderr  missing_from_custom.rs  missing_from_custom.stderr  non_fastwritable.rs  non_fastwritable.stderr  not_a_recipe.rs  not_a_recipe.stderr  not_a_recipe_cookbook.rs  not_a_recipe_cookbook.stderr  not_a_recipe_cookbook_type.rs  not_a_recipe_cookbook_type.stderr  wrong_bake_content_type.rs  wrong_bake_content_type.stderr
tests/pretty/: Cargo.toml
tests/pretty/src/: lib.rs
tests/pretty/src/snapshots/: full_page_bake.snap  full_page_pretty.snap  stylesheet_bake.snap  stylesheet_pretty.snap
(+404 files in other folders)
