[workspace]
resolver = "2"
members = ["crates/granola", "crates/granola-derive", "examples/*", "tests/*"]
default-members = ["crates/granola"]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lpnh/granola"
keywords = ["askama", "html", "template", "web"]
categories = ["template-engine", "web-programming"]

[workspace.dependencies]
askama = { version = "0.16.0", features = ["code-in-doc"] }
indexmap = "2.14.0"
strum = { version = "0.28.0", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "deny"
unused_qualifications = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs)'] }

# https://doc.rust-lang.org/cargo/reference/profiles.html?highlight=share-generics#overrides
[profile.dev.package."*"]
opt-level = 3

# cachegrind (Axis 3, tests/cpu) needs symbols to attribute instructions;
# profiles only live at the workspace root.
[profile.bench]
debug = true
