[package]
name = "granola-derive"
version.workspace = true
description = "Derive macros for the granola template library"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }

[lints]
workspace = true
