[package]
name = "hello_world"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
askama = { workspace = true }
axum = "0.8.9"
granola = { path = "../../crates/granola" }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
