[package]
name = "oats_and_ends"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
axum = "0.8.9"
granola = { path = "../../crates/granola" }
fixtures = { path = "../../tests/fixtures" }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
