[package]
name = "palette"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
askama = { workspace = true }
axum = "0.8.9"
granola = { path = "../../crates/granola" }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.3", default-features = false }
tower-http = { version = "0.6.10", features = ["fs"] }

[lints]
workspace = true
