[package]
name = "alloc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
fixtures = { path = "../fixtures" }
granola = { path = "../../crates/granola" }

[lints]
workspace = true

[dev-dependencies]
insta = "1.48.0"
