[package]
name = "diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
granola = { path = "../../crates/granola" }

[dev-dependencies]
askama = { workspace = true }
trybuild = "1.0"

[lints]
workspace = true
